fixed breakpoints and logo positioning on smaller screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,7 +14,7 @@ body{
     color: white;
 }
 #logo {
-    width: 150px;
+    width: 250px;
     padding-right: 25px;
 }
 .jumbotron img {
@@ -46,7 +46,7 @@ body{
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .display-1{
         font-size: 2.5rem;
     }
@@ -68,7 +68,7 @@ body{
     }
 
 }
-@media (max-width: 991px) {
+@media (max-width: 1200px) {
     .jumbotron{
         padding-left: 20px;
         padding-right: 20px;
@@ -83,7 +83,6 @@ body{
     }
     #logo {
         width: 100%;
-        align-items: end;
     }
     .display-4{
         font-size: 2.5rem;
